# ucd-csci2312-pa1

./: CMakeLists.txt  Point.h  README.md  area.cpp  main.cpp  point.cpp
